rational and emotional with rus version pages

--- a/index_emotional.html
+++ b/index_emotional.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="main-wrapper">
-    <div class="top-banner rational-bg">
+    <div class="top-banner emotional-bg">
       <div class="container">
         <header>
           <div class="row">
@@ -29,29 +29,32 @@
             </div>
           </div>
         </header>
-        <div class="top-banner-txt rus-lang">
+        <div class="top-banner-txt">
           <div class="row">
-            <div class="col-md-12">
-              <h2>УМЕНИЕ ПЛАНИРОВАТЬ РАСХОДЫ – ВАЖНЫЙ НАВЫК.</h2>
-            </div>
             <div class="col-md-10">
-              <h4>НО ИНОГДА ЭТОГО НЕДОСТАТОЧНО.</h4>
-              <p>К счастью, благодаря Кредитному счету не стоит опасаться непредвиденных расходов. Кредитный счет - как виртуальная кредитная карточка. Установите максимальный лимит и используйте средства в том размере и именно тогда, когда возникнет такая необходимость. Размер и время выплат можете также выбрать самостоятельно.</p>
+              <h2 class="fs-40">Kiire ja mugav lisaraha kohe, kui seda vajad. Kasvõi nüüd ja praegu.</h2>
+              <p>Oled väsinud pidevast plaanide edasi lükkamisest, sest ei tea, millal seda endale lubada saad? Krediidikonto on lahendus, mis muudab Su unistused reaalsuseks.</p>
+              <p class="question">Kuidas?</p>
+              <ul class="top-list">
+                <li><img src="./assets/images/tick.png" alt=""> KIIRE - Raha kätte 15 minutiga</li>
+                <li><img src="./assets/images/tick.png" alt=""> PERSONAALNE - Võimalik taotleda kuni 4000 eurot</li>
+                <li><img src="./assets/images/tick.png" alt=""> PAINDLIK - Tagasimaksete summa ja perioodi üle otsustad Sina</li>
+              </ul>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-7">
             <div class="panel">
-              <div class="panel-main-wrap rus-lang">
+              <div class="panel-main-wrap">
                 <div class="panel-main">
-                  <p class="range-label">Необходимая сумма: <span>1250€</span></p>
+                  <p class="range-label">Kasutusele võetav summa: <span>1250€</span></p>
                   <div class="range-wrap">
                     <span class="count">0€</span>
                     <input id="range1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="4000" data-slider-step="1" data-slider-value="1000"/>
                     <span class="count">4000€</span>
                   </div>
-                  <p class="range-label">Период: <span>12 МЕСЯЦЕВ</span></p>
+                  <p class="range-label">Periood: <span>12 Kuud</span></p>
                   <div class="range-wrap">
                     <span class="count">3</span>
                     <input id="range2" data-slider-id='ex2Slider' type="text" data-slider-min="3" data-slider-max="36" data-slider-step="2" data-slider-value="14"/>
@@ -59,13 +62,13 @@
                   </div>
                 </div>
                 <div class="panel-cell">
-                  <p class="ttl">Месячный платеж:</p>
+                  <p class="ttl">Kuumakse:</p>
                   <b>125€</b>
-                  <span>Месячный интресс: 3,75%</span>
+                  <span>Intress kuus: 3,75%</span>
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+                <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
               </div>
             </div>
           </div>
@@ -78,168 +81,129 @@
           <div class="row">
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Мне понравилось, что все очень подробно объяснили. Поняла, как работает система.
+                Mulle meeldis see, et mulle seletati kõik väga täpselt ära, tänu millele sain asjadest paremini aru.
               </p>
               <p class="name">
-                Карита,
+                Karita,
               </p>
               <p class="info">
-                Тарту, 20 лет
+                Tartu, 20
               </p>
             </div>
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Всегда очень быстро получаю от вас ответ. Спасибо за дружелюбное и, в то же время, серьезное отношение к клиентам.
+                Kiire reageerimine, sõbralik ja asjalik suhtlus kliendiga.
               </p>
               <p class="name">
-                Айвар,
+                Aivar,
               </p>
               <p class="info">
-                Валга, 50 лет
+                Valga, 50
               </p>
             </div>
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Вся система заметно продуманнее, чем у других фирм, предлагающих кредиты.
+                Kogu süsteem on konkureerivatest laenuandjatest täiuslikum.
               </p>
               <p class="name">
-                Мадис,
+                Madis,
               </p>
               <p class="info">
-                Палдиски, 27 лет
+                Paldiski, 27
               </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="rational-info-layer">
+
+
+      <div class="credit-layer">
+        <div class="triangle-left"></div>
         <div class="container">
           <div class="row">
-            <div class="col-sm-4 rat-info-block">
-              <div class="icon-wrap">
-                <img src="./assets/images/rat-icon-1.png" alt="">
-              </div>
-              <div class="rat-txt">
-                <p class="number">120 000 +</p>
-                <p>ДОВОЛЬНЫХ КЛИЕНТОВ ПО ВСЕЙ ЭСТОНИИ</p>
+            <div class="col-md-6">
+              <div class="phone-img-wrap">
+                <img class="phone-card" src="./assets/images/phone-card.png" alt="">
               </div>
             </div>
-            <div class="col-sm-4 rat-info-block">
-              <div class="icon-wrap">
-                <img src="./assets/images/rat-icon-2.png" alt="">
-              </div>
-              <div class="rat-txt">
-                <p class="number">11</p>
-                <p>ЛЕТ ДЕЯТЕЛЬНОСТИ</p>
-              </div>
+            <div class="col-md-6">
+              <h2 class="text-left mb-75">KREDIIDIKONTO ON NAGU VIRTUAALNE KREDIITKAART, MIS PAKUB SULLE PARIMAT LISARAHA, SEST:</h2>
+
+              <ul class="credit-check-list">
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Enda valitud limiidi ulatuses saad raha kasutada täpselt Sulle sobivas summas ja ajal.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Raha väljamakseid oma arvelduskontole saad teha nii mitu korda ja sellises summas, kui ise soovid (kasvõi 10€ kaupa), seni kuni väljamaksete kogusumma ei ületa Sinu limiiti.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Intressi maksad vaid selle summa pealt, mida päriselt kasutad.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Sina otsustad, millal ja kui palju tagasi maksad. Maksegraafik on paindlik ja personaalne.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Lepingu sõlmid vaid üks kord. Edaspidi kasuta lisaraha täpselt siis, kui seda soovid. Uut lepingut ei ole vaja.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Kuutasu on 0€- ei mingeid ootamatuid lisakulusid.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Tagasimaksed algavad alles 2 kuu pärast, kui kasutusse võetud summa ületab 1000€.</span>
+                </li>
+              </ul>
             </div>
-            <div class="col-sm-4 rat-info-block">
-              <div class="icon-wrap">
-                <img src="./assets/images/rat-icon-3.png" alt="">
-              </div>
-              <div class="rat-txt">
-                <p class="number">128 млн</p>
-                <p>ЕВРО СУММА ВЫДАННЫХ КРЕДИТОВ</p>
+          </div>
+          <div class="wave-wrap">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <img src="./assets/images/wave.png" alt="">
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="rat-info-table">
         <div class="container">
-          <table class="table">
-            <tbody>
-              <tr>
-                <td>Деньги получите</td>
-                <td>Меньше чем за 15 минут</td>
-              </tr>
-              <tr>
-                <td>Дополнительные средства</td>
-                <td>До 4000 евро</td>
-              </tr>
-              <tr>
-                <td>Период выплат</td>
-                <td>От 3 до 36 месяцев</td>
-              </tr>
-              <tr>
-                <td>График выплат</td>
-                <td>Решаете самостоятельно</td>
-              </tr>
-              <tr>
-                <td>1 заявление, в дальнейшем используйте дополнительные средства по своему усмотрению</td>
-                <td><img src="./assets/images/orange-tick.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>Выплата средств</td>
-                <td>Через мобильное приложение или портал самообслуживания на домашней странице</td>
-              </tr>
-              <tr>
-                <td>Проценты выплачиваются</td>
-                <td>Только с использованной суммы</td>
-              </tr>
-              <tr>
-                <td><a href="https://credit24.com/ee/faqs">30-дневная гарантия удовлетворенности</a></td>
-                <td><img src="./assets/images/orange-tick.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>Плата за договор и месячная плата</td>
-                <td>0€</td>
-              </tr>
-              <tr>
-                <td>Платежный отпуск</td>
-                <td>Бесплатно</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-      <div class="add-cash-layer">
-        <div class="container">
-          <h2>ПОЛУЧИТЬ ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА ОЧЕНЬ ПРОСТО:</h2>
+          <h2>SU UNISTUSED ON 15 MINUTI KAUGUSEL</h2>
           <div class="row">
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-4.png" alt="">
               </div>
-              <h4>На старт</h4>
+              <h4>Tähelepanu</h4>
               <p>
-                Нажмите на кнопку «Отправить заявку» и заполните заявление, указав желаемую сумму.
+                Vajuta nupule “Taotle kohe“ ja täida avaldus soovitud summaga.
               </p>
             </div>
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-5.png" alt="">
               </div>
-              <h4>Внимание</h4>
+              <h4>Valmis olla</h4>
               <p>
-                Буквально через пару минут Вы получите персональное предложение и договор.
+                Saa hetkega personaalne pakkumine ja allkirjasta leping.
               </p>
             </div>
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-6.png" alt="">
               </div>
-              <h4>Марш</h4>
+              <h4>Start</h4>
               <p>
-                Деньги будут перечислены на Ваш Кредитный счет в течение 15 минут после заключения договора.
+                Raha  jõuab Sinu Krediidikontole 15 minuti jooksul.
               </p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-              <div class="check-layer">
-                <p>Выплаты с Кредитного счета на свой расчетный счет можете делать так часто и в таком размере, как сами пожелаете (хоть по 10 евро). Сумма выплат не должна превышать установленный Вами изначально лимит.</p>
-              </div>
-              <div class="check-layer">
-                <p>После возврата использованной суммы, Вы снова получите возможность использовать дополнительные средства в пределах установленного лимита.</p>
-              </div>
-            </div>
-          </div>
+          <h5 class="info-bottom-text">Vii oma unistused täide. Kõik on võimalik.</h5>
           <div class="add-cash-button-wrap">
-            <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+            <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
           </div>
         </div>
       </div>
@@ -252,7 +216,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="footer-txt">
-            <p>Если у Вас есть вопросы – свяжитесь с нашими специалистами.</p>
+            <p>Kui Sul on küsimusi, võta julgesti ühendust meie klienditeenindusega.</p>
             <div class="row">
               <div class="col-sm-6 btn-wrap-right">
                 <a href="#" class="btn btn-blue" data-toggle="modal" data-target="#phoneModal"><img src="./assets/images/button-icon-1.png" alt=""> <span>1324</span></a>
