--- a/index_emotional_ru.html
+++ b/index_emotional_ru.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="main-wrapper">
-    <div class="top-banner rational-bg">
+    <div class="top-banner emotional-bg">
       <div class="container">
         <header>
           <div class="row">
@@ -32,11 +32,14 @@
         <div class="top-banner-txt rus-lang">
           <div class="row">
             <div class="col-md-12">
-              <h2>УМЕНИЕ ПЛАНИРОВАТЬ РАСХОДЫ – ВАЖНЫЙ НАВЫК.</h2>
-            </div>
-            <div class="col-md-10">
-              <h4>НО ИНОГДА ЭТОГО НЕДОСТАТОЧНО.</h4>
-              <p>К счастью, благодаря Кредитному счету не стоит опасаться непредвиденных расходов. Кредитный счет - как виртуальная кредитная карточка. Установите максимальный лимит и используйте средства в том размере и именно тогда, когда возникнет такая необходимость. Размер и время выплат можете также выбрать самостоятельно.</p>
+              <h2>ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА – БЫСТРО, УДОБНО И ИМЕННО ТОГДА, КОГДА НУЖНО. ДА ХОТЬ ПРЯМО СЕЙЧАС.</h2>
+              <p>Устали постоянно откладывать свои планы? Не знаете, сможете ли когда – нибудь воплотить в жизнь свои мечты? Кредитный счет – это возможность превратить желания в реальность.</p>
+              <p class="question">КАКИМ ОБРАЗОМ?</p>
+              <ul class="top-list">
+                <li><img src="./assets/images/tick.png" alt=""> БЫСТРО - Деньги получите всего за 15 минут</li>
+                <li><img src="./assets/images/tick.png" alt=""> ИНДИВИДУАЛЬНО - Можете ходатайствовать о сумме до 4000</li>
+                <li><img src="./assets/images/tick.png" alt=""> ГИБКО - Размер и время выплат можете выбрать самостоятельно</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -78,142 +81,115 @@
           <div class="row">
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Мне понравилось, что все очень подробно объяснили. Поняла, как работает система.
+                Я очень счастлива, что стала вашим клиентом. Порадовало ваше уважительное и вежливое отношение.
               </p>
               <p class="name">
-                Карита,
+                Алла,
               </p>
               <p class="info">
-                Тарту, 20 лет
+                Таллинн, 52 года
               </p>
             </div>
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Всегда очень быстро получаю от вас ответ. Спасибо за дружелюбное и, в то же время, серьезное отношение к клиентам.
+                Скажу честно, я в восторге! Искренне благодарен вам и готов стать постоянным клиентом! Очень внимательный подход к ситуации.
               </p>
               <p class="name">
                 Айвар,
               </p>
               <p class="info">
-                Валга, 50 лет
+                Пыльва, 60 лет
               </p>
             </div>
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Вся система заметно продуманнее, чем у других фирм, предлагающих кредиты.
+                Очень гибкое, отзывчивое и приветливое обслуживание!
               </p>
               <p class="name">
-                Мадис,
+                Хейке,
               </p>
               <p class="info">
-                Палдиски, 27 лет
+                Раквере, 30 лет
               </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="rational-info-layer">
+
+
+      <div class="credit-layer">
+        <div class="triangle-left"></div>
         <div class="container">
           <div class="row">
-            <div class="col-sm-4 rat-info-block">
-              <div class="icon-wrap">
-                <img src="./assets/images/rat-icon-1.png" alt="">
-              </div>
-              <div class="rat-txt">
-                <p class="number">120 000 +</p>
-                <p>ДОВОЛЬНЫХ КЛИЕНТОВ ПО ВСЕЙ ЭСТОНИИ</p>
+            <div class="col-md-12">
+              <h2 class="mb-75">КРЕДИТНЫЙ СЧЕТ - КАК ВИРТУАЛЬНАЯ КРЕДИТНАЯ КАРТОЧКА, КОТОРАЯ ДАЕТ ВОЗМОЖНОСТЬ БЫСТРО ПОЛУЧИТЬ ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА:</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="phone-img-wrap rus-lang">
+                <img class="phone-card" src="./assets/images/phone-card.png" alt="">
               </div>
             </div>
-            <div class="col-sm-4 rat-info-block">
-              <div class="icon-wrap">
-                <img src="./assets/images/rat-icon-2.png" alt="">
-              </div>
-              <div class="rat-txt">
-                <p class="number">11</p>
-                <p>ЛЕТ ДЕЯТЕЛЬНОСТИ</p>
-              </div>
+            <div class="col-md-6">
+              <ul class="credit-check-list">
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>В пределах установленного лимита Вы можете использовать дополнительные средства именно в том размере и в тот момент, когда возникнет такая необходимость.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Выплаты с Кредитного счета на свой расчетный счет можете делать так часто и в таком размере, как сами пожелаете (хоть по 10 евро) до тех пор, пока сумма выплат не превысит установленный Вами изначально лимит.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Проценты выплачиваются только с использованной суммы.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>В каком объеме и как часто делать выплаты - решаете только Вы. График платежей гибкий и составляется персонально.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Договор оформляется лишь 1 раз. В дальнейшем можно обращаться за дополнительными средствами только если появится необходимость - заключать новый договор для этого не потребуется.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Ежемесячный платеж 0€ и никаких неожиданных дополнительных платежей.</span>
+                </li>
+                <li>
+                  <img src="./assets/images/circle-tick-red.png" alt="">
+                  <span>Если взятая сумма превышает 1000€, выплаты начинаются только через 2 месяца.</span>
+                </li>
+              </ul>
             </div>
-            <div class="col-sm-4 rat-info-block">
-              <div class="icon-wrap">
-                <img src="./assets/images/rat-icon-3.png" alt="">
-              </div>
-              <div class="rat-txt">
-                <p class="number">128 млн</p>
-                <p>ЕВРО СУММА ВЫДАННЫХ КРЕДИТОВ</p>
+          </div>
+          <div class="wave-wrap">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <img src="./assets/images/wave.png" alt="">
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="rat-info-table">
         <div class="container">
-          <table class="table">
-            <tbody>
-              <tr>
-                <td>Деньги получите</td>
-                <td>Меньше чем за 15 минут</td>
-              </tr>
-              <tr>
-                <td>Дополнительные средства</td>
-                <td>До 4000 евро</td>
-              </tr>
-              <tr>
-                <td>Период выплат</td>
-                <td>От 3 до 36 месяцев</td>
-              </tr>
-              <tr>
-                <td>График выплат</td>
-                <td>Решаете самостоятельно</td>
-              </tr>
-              <tr>
-                <td>1 заявление, в дальнейшем используйте дополнительные средства по своему усмотрению</td>
-                <td><img src="./assets/images/orange-tick.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>Выплата средств</td>
-                <td>Через мобильное приложение или портал самообслуживания на домашней странице</td>
-              </tr>
-              <tr>
-                <td>Проценты выплачиваются</td>
-                <td>Только с использованной суммы</td>
-              </tr>
-              <tr>
-                <td><a href="https://credit24.com/ee/faqs">30-дневная гарантия удовлетворенности</a></td>
-                <td><img src="./assets/images/orange-tick.png" alt=""></td>
-              </tr>
-              <tr>
-                <td>Плата за договор и месячная плата</td>
-                <td>0€</td>
-              </tr>
-              <tr>
-                <td>Платежный отпуск</td>
-                <td>Бесплатно</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-      <div class="add-cash-layer">
-        <div class="container">
-          <h2>ПОЛУЧИТЬ ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА ОЧЕНЬ ПРОСТО:</h2>
+          <h2>ТВОИ МЕЧТЫ НАХОДЯТСЯ НА РАССТОЯНИИ 15 МИНУТ</h2>
           <div class="row">
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-4.png" alt="">
               </div>
-              <h4>На старт</h4>
+              <h4>Заполните заявку</h4>
               <p>
-                Нажмите на кнопку «Отправить заявку» и заполните заявление, указав желаемую сумму.
+                Нажмите на кнопку «Отправить заявку» и заполните заявление.
               </p>
             </div>
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-5.png" alt="">
               </div>
-              <h4>Внимание</h4>
+              <h4>Подпишите договор</h4>
               <p>
                 Буквально через пару минут Вы получите персональное предложение и договор.
               </p>
@@ -222,22 +198,13 @@
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-6.png" alt="">
               </div>
-              <h4>Марш</h4>
+              <h4>Получите дополнительные средства</h4>
               <p>
                 Деньги будут перечислены на Ваш Кредитный счет в течение 15 минут после заключения договора.
               </p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-              <div class="check-layer">
-                <p>Выплаты с Кредитного счета на свой расчетный счет можете делать так часто и в таком размере, как сами пожелаете (хоть по 10 евро). Сумма выплат не должна превышать установленный Вами изначально лимит.</p>
-              </div>
-              <div class="check-layer">
-                <p>После возврата использованной суммы, Вы снова получите возможность использовать дополнительные средства в пределах установленного лимита.</p>
-              </div>
-            </div>
-          </div>
+          <h5 class="info-bottom-text">Пусть мечты сбываются. Все возможно!</h5>
           <div class="add-cash-button-wrap">
             <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
           </div>
