res pages update

--- a/index_ru.html
+++ b/index_ru.html
@@ -32,10 +32,13 @@
         <div class="top-banner-txt rus-lang">
           <div class="row">
             <div class="col-md-10">
-              <h2>Дополнительные средства – быстро, удобно и именно тогда, когда нужно</h2>
+              <h2>Дополнительные средства – <br> быстро, удобно и именно тогда, когда нужно</h2>
+              </div></div>
+              <div class="row">
+              <div class="col-md-8">
               <p>Бывают моменты, когда внезапно появляется потребность в небольшой дополнительной сумме денег. Причиной могут быть непредвиденные расходы или искреннее желание осуществить давнюю мечту.</p>
               <ul class="top-list">
-                <li><img src="./assets/images/tick.png" alt=""> Вы получите деньги через 15 минут</li>
+                <li><img src="./assets/images/tick.png" alt=""> Получите деньги через 15 минут</li>
                 <li><img src="./assets/images/tick.png" alt=""> Можете ходатайствовать о сумме до 4000€</li>
                 <li><img src="./assets/images/tick.png" alt=""> Срок возврата от 3 до 36 месяцев</li>
               </ul>
@@ -63,7 +66,7 @@
                 <div class="panel-cell">
                   <p class="ttl">Месячный платеж:</p>
                   <b>125€</b>
-                  <span>Интрес в месяц: 3,75%</span>
+                  <span>Месячный интресс: 3,75%</span>
                 </div>
               </div>
               <div class="panel-button-wrap">
@@ -93,7 +96,7 @@
               </div>
               <h4>На приобретение автомобиля</h4>
               <p>
-                Можно сразу зарегистрировать автомобиль на свое имя и без оформления страховки Каско.
+                Можно сразу зарегистрировать автомобиль на свое имя, не оформляя страховку Каско.
               </p>
             </div>
             <div class="col-md-4 info-block">
@@ -102,7 +105,7 @@
               </div>
               <h4>На оплату покупок</h4>
               <p>
-                Покупайте все, что пожелаете, и возвращайте деньги тогда, когда будет возможность./
+                Покупайте все, что пожелаете, и возвращайте деньги тогда, когда будет возможность.
               </p>
             </div>
           </div>
@@ -121,7 +124,7 @@
                   </div>
                   <div class="text-cell">
                     <span>
-                      Разовый договор - в дальнейшем можно обращаться за дополнительными средствами только если появится необходимость.
+                      Разовый договор - в дальнейшем обращайтесь за дополнительными средствами только если появится необходимость.
                     </span>
                   </div>
                 </li>
@@ -187,7 +190,7 @@
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2">
                     <div class="list-block">
-                      <h4>Как получить деньги за 15 минут?</h4>
+                      <h4>Как получить деньги за <br> 15 минут?</h4>
                       <ul class="list">
                         <li>
                           <div class="icon-wrap">
