generic heading text size

--- a/index_ru.html
+++ b/index_ru.html
@@ -31,8 +31,8 @@
         </header>
         <div class="top-banner-txt rus-lang">
           <div class="row">
-            <div class="col-md-10">
-              <h2>Дополнительные средства – <br> быстро, удобно и именно тогда, когда нужно</h2>
+            <div class="col-md-9">
+              <h2>Дополнительные средства – быстро,<br> удобно и именно тогда, когда нужно</h2>
               </div></div>
               <div class="row">
               <div class="col-md-8">
