fix rational and emotional pages

--- a/index_emotional.html
+++ b/index_emotional.html
@@ -33,12 +33,12 @@
           <div class="row">
             <div class="col-md-10">
               <h2 class="fs-40">Kiire ja mugav lisaraha kohe, kui seda vajad. Kasvõi nüüd ja praegu.</h2>
-              <p>Oled väsinud pidevast plaanide edasi lükkamisest, sest ei tea, millal seda endale lubada saad? Krediidikonto on lahendus, mis muudab Su unistused reaalsuseks.</p>
+              <p class="fs-20">Oled väsinud pidevast plaanide edasi lükkamisest, sest ei tea, millal seda endale lubada saad? Krediidikonto on lahendus, mis muudab Su unistused reaalsuseks.</p>
               <p class="question">Kuidas?</p>
-              <ul class="top-list">
-                <li><img src="./assets/images/tick.png" alt=""> KIIRE - Raha kätte 15 minutiga</li>
-                <li><img src="./assets/images/tick.png" alt=""> PERSONAALNE - Võimalik taotleda kuni 4000 eurot</li>
-                <li><img src="./assets/images/tick.png" alt=""> PAINDLIK - Tagasimaksete summa ja perioodi üle otsustad Sina</li>
+              <ul class="top-list fs-20">
+                <li><img src="./assets/images/tick.png" alt=""> KIIRE - <span>Raha kätte 15 minutiga</span></li>
+                <li><img src="./assets/images/tick.png" alt=""> PERSONAALNE - <span>Võimalik taotleda kuni 4000 eurot</span></li>
+                <li><img src="./assets/images/tick.png" alt=""> PAINDLIK - <span>Tagasimaksete summa ja perioodi üle otsustad Sina</span></li>
               </ul>
             </div>
           </div>
@@ -177,16 +177,16 @@
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-4.png" alt="">
               </div>
-              <h4>Tähelepanu</h4>
+              <h4>Täida avaldus</h4>
               <p>
-                Vajuta nupule “Taotle kohe“ ja täida avaldus soovitud summaga.
+                Klikka “Taotlen kohe” nupule ja täida avaldus.
               </p>
             </div>
             <div class="col-md-4 info-block">
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-5.png" alt="">
               </div>
-              <h4>Valmis olla</h4>
+              <h4>Allkirjasta leping</h4>
               <p>
                 Saa hetkega personaalne pakkumine ja allkirjasta leping.
               </p>
@@ -195,9 +195,9 @@
               <div class="img-wrap">
                 <img src="./assets/images/rat-icon-6.png" alt="">
               </div>
-              <h4>Start</h4>
+              <h4>Naudi lisaraha</h4>
               <p>
-                Raha  jõuab Sinu Krediidikontole 15 minuti jooksul.
+                Lisaraha saad oma Credit24 kontole 15 minutiga.
               </p>
             </div>
           </div>
