--- a/index_emotional_ru.html
+++ b/index_emotional_ru.html
@@ -33,12 +33,12 @@
           <div class="row">
             <div class="col-md-12">
               <h2>ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА – БЫСТРО, УДОБНО И ИМЕННО ТОГДА, КОГДА НУЖНО. ДА ХОТЬ ПРЯМО СЕЙЧАС.</h2>
-              <p>Устали постоянно откладывать свои планы? Не знаете, сможете ли когда – нибудь воплотить в жизнь свои мечты? Кредитный счет – это возможность превратить желания в реальность.</p>
+              <p class="fz-20">Устали постоянно откладывать свои планы? Не знаете, сможете ли когда – нибудь воплотить в жизнь свои мечты? Кредитный счет – это возможность превратить желания в реальность.</p>
               <p class="question">КАКИМ ОБРАЗОМ?</p>
-              <ul class="top-list">
-                <li><img src="./assets/images/tick.png" alt=""> БЫСТРО - Деньги получите всего за 15 минут</li>
-                <li><img src="./assets/images/tick.png" alt=""> ИНДИВИДУАЛЬНО - Можете ходатайствовать о сумме до 4000</li>
-                <li><img src="./assets/images/tick.png" alt=""> ГИБКО - Размер и время выплат можете выбрать самостоятельно</li>
+              <ul class="top-list fs-20">
+                <li><img src="./assets/images/tick.png" alt=""> БЫСТРО - <span>Деньги получите всего за 15 минут</span></li>
+                <li><img src="./assets/images/tick.png" alt=""> ИНДИВИДУАЛЬНО - <span>Можете ходатайствовать о сумме до 4000</span></li>
+                <li><img src="./assets/images/tick.png" alt=""> ГИБКО - <span>Размер и время выплат можете выбрать самостоятельно</span></li>
               </ul>
             </div>
           </div>
