--- a/index_rational.html
+++ b/index_rational.html
@@ -32,7 +32,7 @@
         <div class="top-banner-txt">
           <div class="row">
             <div class="col-md-10">
-              <h2>Rahaasjade ette planeerimine on oluline.</h2>
+              <h2 class="fs-40">Rahaasjade ette planeerimine on oluline.</h2>
               <h4>Ent vahel sellest ei piisa.</h4>
               <p>Õnneks ei pea Krediidikontoga ettenägematuid kulutusi kartma. Konto on nagu virtuaalne krediitkaart. Vali endale kuulimiit, mille piires kasuta raha täpselt Sulle sobival ajal ja summas. Tagasimaksete summa ja aja üle otsustad Sina.</p>
             </div>
