--- a/index_rational_ru.html
+++ b/index_rational_ru.html
@@ -32,7 +32,7 @@
         <div class="top-banner-txt rus-lang">
           <div class="row">
             <div class="col-md-12">
-              <h2>УМЕНИЕ ПЛАНИРОВАТЬ РАСХОДЫ – ВАЖНЫЙ НАВЫК.</h2>
+              <h2 class="fs-40">УМЕНИЕ ПЛАНИРОВАТЬ РАСХОДЫ – ВАЖНЫЙ НАВЫК.</h2>
             </div>
             <div class="col-md-10">
               <h4>НО ИНОГДА ЭТОГО НЕДОСТАТОЧНО.</h4>
