not completely rational

--- a/index_rational.html
+++ b/index_rational.html
@@ -29,7 +29,7 @@
             </div>
           </div>
         </header>
-        <div class="top-banner-txt">
+        <div class="top-banner-txt rational-pg">
           <div class="row">
             <div class="col-md-10">
               <h2 class="fs-40">Rahaasjade ette planeerimine on oluline.</h2>
