pre emotional pp

--- a/index_emotional.html
+++ b/index_emotional.html
@@ -29,13 +29,17 @@
             </div>
           </div>
         </header>
-        <div class="top-banner-txt">
+        <div class="top-banner-txt emotional-pg">
           <div class="row">
             <div class="col-md-10">
               <h2 class="fs-40">Kiire ja mugav lisaraha kohe, kui seda vajad. Kasvõi nüüd ja praegu.</h2>
-              <p class="fs-20">Oled väsinud pidevast plaanide edasi lükkamisest, sest ei tea, millal seda endale lubada saad? Krediidikonto on lahendus, mis muudab Su unistused reaalsuseks.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-9">
+              <p>Oled väsinud pidevast plaanide edasi lükkamisest, sest ei tea, millal seda endale lubada saad? Krediidikonto on lahendus, mis muudab Su unistused reaalsuseks.</p>
               <p class="question">Kuidas?</p>
-              <ul class="top-list fs-20">
+              <ul class="top-list">
                 <li><img src="./assets/images/tick.png" alt=""> KIIRE - <span>Raha kätte 15 minutiga</span></li>
                 <li><img src="./assets/images/tick.png" alt=""> PERSONAALNE - <span>Võimalik taotleda kuni 4000 eurot</span></li>
                 <li><img src="./assets/images/tick.png" alt=""> PAINDLIK - <span>Tagasimaksete summa ja perioodi üle otsustad Sina</span></li>
@@ -81,35 +85,35 @@
           <div class="row">
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Mulle meeldis see, et mulle seletati kõik väga täpselt ära, tänu millele sain asjadest paremini aru.
+                Ma olen väga õnnelik, et olen teie klient. Õiglane ja viisakas suhtumine.
               </p>
               <p class="name">
-                Karita,
+                Alla,
               </p>
               <p class="info">
-                Tartu, 20
+                Tallinn, 52
               </p>
             </div>
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Kiire reageerimine, sõbralik ja asjalik suhtlus kliendiga.
+                Ütlen siiralt, ma olen väga vaimustuses. Ma tänan. Hakka või Teie püsikliendiks! Väga meeldiv olukorrale lähenemine.
               </p>
               <p class="name">
                 Aivar,
               </p>
               <p class="info">
-                Valga, 50
+                Põlva, 60
               </p>
             </div>
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
               <p class="quote-wrap">
-                Kogu süsteem on konkureerivatest laenuandjatest täiuslikum.
+                Väga paindlik, vastutulelik ning abivalmis teenindus.
               </p>
               <p class="name">
-                Madis,
+                Heike,
               </p>
               <p class="info">
-                Paldiski, 27
+                Rakvere, 30
               </p>
             </div>
           </div>
