--- a/index_rational_ru.html
+++ b/index_rational_ru.html
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <div class="rational-info-layer">
+      <div class="rational-info-layer rus-lang">
         <div class="container">
           <div class="row">
             <div class="col-sm-4 rat-info-block">
@@ -196,7 +196,7 @@
         </div>
       </div>
 
-      <div class="add-cash-layer">
+      <div class="add-cash-layer rus-lang">
         <div class="container">
           <h2>ПОЛУЧИТЬ ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА ОЧЕНЬ ПРОСТО:</h2>
           <div class="row">
