--- a/index_emotional_ru.html
+++ b/index_emotional_ru.html
@@ -32,10 +32,10 @@
         <div class="top-banner-txt rus-lang">
           <div class="row">
             <div class="col-md-12">
-              <h2>ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА – БЫСТРО, УДОБНО И ИМЕННО ТОГДА, КОГДА НУЖНО. ДА ХОТЬ ПРЯМО СЕЙЧАС.</h2>
-              <p class="fz-20">Устали постоянно откладывать свои планы? Не знаете, сможете ли когда – нибудь воплотить в жизнь свои мечты? Кредитный счет – это возможность превратить желания в реальность.</p>
+              <h2 class="fs-40">ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА – БЫСТРО, УДОБНО И ИМЕННО ТОГДА, КОГДА НУЖНО. ДА ХОТЬ ПРЯМО СЕЙЧАС.</h2>
+              <p>Устали постоянно откладывать свои планы? Не знаете, сможете ли когда – нибудь воплотить в жизнь свои мечты? Кредитный счет – это возможность превратить желания в реальность.</p>
               <p class="question">КАКИМ ОБРАЗОМ?</p>
-              <ul class="top-list fs-20">
+              <ul class="top-list">
                 <li><img src="./assets/images/tick.png" alt=""> БЫСТРО - <span>Деньги получите всего за 15 минут</span></li>
                 <li><img src="./assets/images/tick.png" alt=""> ИНДИВИДУАЛЬНО - <span>Можете ходатайствовать о сумме до 4000</span></li>
                 <li><img src="./assets/images/tick.png" alt=""> ГИБКО - <span>Размер и время выплат можете выбрать самостоятельно</span></li>
@@ -76,7 +76,7 @@
       </div>
     </div>
     <div class="main-content">
-      <div class="quote-layer">
+      <div class="quote-layer rus-lang">
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
@@ -118,12 +118,12 @@
 
 
 
-      <div class="credit-layer">
+      <div class="credit-layer rus-lang">
         <div class="triangle-left"></div>
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h2 class="mb-75">КРЕДИТНЫЙ СЧЕТ - КАК ВИРТУАЛЬНАЯ КРЕДИТНАЯ КАРТОЧКА, КОТОРАЯ ДАЕТ ВОЗМОЖНОСТЬ БЫСТРО ПОЛУЧИТЬ ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА:</h2>
+              <h2 class="mb-50">КРЕДИТНЫЙ СЧЕТ - КАК ВИРТУАЛЬНАЯ КРЕДИТНАЯ КАРТОЧКА, КОТОРАЯ ДАЕТ ВОЗМОЖНОСТЬ БЫСТРО ПОЛУЧИТЬ ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА:</h2>
             </div>
           </div>
           <div class="row">
@@ -165,7 +165,7 @@
               </ul>
             </div>
           </div>
-          <div class="wave-wrap">
+          <div class="wave-wrap rus-lang">
             <div class="row">
               <div class="col-md-12 text-center">
                 <img src="./assets/images/wave.png" alt="">
@@ -173,8 +173,8 @@
             </div>
           </div>
         </div>
-        <div class="container">
-          <h2>ТВОИ МЕЧТЫ НАХОДЯТСЯ НА РАССТОЯНИИ 15 МИНУТ</h2>
+        <div class="container emotional-rus-layer">
+          <h2 class="emotional-head">ТВОИ МЕЧТЫ НАХОДЯТСЯ НА РАССТОЯНИИ 15 МИНУТ</h2>
           <div class="row">
             <div class="col-md-4 info-block">
               <div class="img-wrap">
