--- a/index_emotional_ru.html
+++ b/index_emotional_ru.html
@@ -29,7 +29,7 @@
             </div>
           </div>
         </header>
-        <div class="top-banner-txt rus-lang">
+        <div class="top-banner-txt emotional-pg rus-lang">
           <div class="row">
             <div class="col-md-12">
               <h2 class="fs-40">ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА – БЫСТРО, УДОБНО И ИМЕННО ТОГДА, КОГДА НУЖНО. ДА ХОТЬ ПРЯМО СЕЙЧАС.</h2>
